--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@fancyapps/ui": "^4.0.27",
     "aos": "^3.0.0-beta.6",
     "chart.js": "^3.8.0",
+    "choices.js": "^10.1.0",
     "gsap": "^3.10.4",
     "inputmask": "^5.0.7",
     "jquery": "^3.6.0",
